--- a/media/main.css
+++ b/media/main.css
@@ -1,17 +1,24 @@
+html, body {
+	height: 100%;
+}
+
+.full {
+	height: 100%;
+}
+
 .infobox {
     background-color: #EBEBEB;
     width: 900px;
     clear: both;
     display: block;
-    height: 250px;
+/*    height: 250px; */
     padding: 10px;
     margin: 10px;
 
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
-
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
     border-style: solid;
     border-color: black;
     border-width: 1px;
@@ -24,6 +31,13 @@ tr {
 .main {
     background-color: #E9F1F4;
     height: 700px;
+    -moz-box-shadow: 5px 5px 5px #888;
+    -webkit-box-shadow: 5px 5px 5px #888;
+    box-shadow: 5px 5px 5px #888;
+}
+
+.mainrpt {
+    background-color: #E9F1F4;
     -moz-box-shadow: 5px 5px 5px #888;
     -webkit-box-shadow: 5px 5px 5px #888;
     box-shadow: 5px 5px 5px #888;
@@ -79,10 +93,10 @@ h1 {
     width: 900px;
     height: 40px;
 
-    -moz-border-top-left-radius: 10px;
-    -moz-border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     margin: -10px;
     padding: 0px 10px 0px 10px;
 }
